class jour extends Object :


